[gd_scene load_steps=5 format=2]

[ext_resource path="res://Area.gd" type="Script" id=1]
[ext_resource path="res://RobotoMono-VariableFont_wght.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="second_event_trigger" type="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00443959, 0.00911236, -0.00191689 )
collision_layer = 0
collision_mask = 64
script = ExtResource( 1 )

[node name="eventGUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="eventGUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="warning" type="Label" parent="eventGUI/Control"]
anchor_left = 0.191
anchor_top = 0.448
anchor_right = 0.849
anchor_bottom = 0.64
margin_left = 15.8308
margin_top = 0.130157
margin_right = 664.511
margin_bottom = 92.4502
rect_rotation = 0.381148
custom_fonts/font = SubResource( 1 )
text = "They are coming"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="howToSprint" type="Label" parent="eventGUI/Control"]
margin_left = 5.0
margin_top = 472.0
margin_right = 226.0
margin_bottom = 507.0
custom_fonts/font = SubResource( 2 )
text = "Presss shift to sprint"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
